--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ body{
   transform: scale(0.97);
   transition: transform .2s
 }
+.memory-card.flip{
+  transform: rotateY(180deg);
+}
 .front-face,
 .back-face {
   width: 100%;
